--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "helmet": "^5.0.2"
     },
     "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/node": "^17.0.23",
         "nodemon": "^2.0.15"
     }
 }
