--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "helmet": "^5.0.2"
     },
     "devDependencies": {
+        "@faker-js/faker": "^6.1.2",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.23",
         "nodemon": "^2.0.15"
