--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node app.js"
+        "devx": "node app.js",
+        "dev": "node -r dotenv/config app.js"
     },
     "repository": {
         "type": "git",
@@ -20,9 +21,11 @@
     },
     "homepage": "https://github.com/mustak/100days-of-code#readme",
     "dependencies": {
+        "dotenv": "^16.0.1",
         "ejs": "^3.0.2",
         "express": "^4.17.3",
-        "helmet": "^5.0.2"
+        "helmet": "^5.0.2",
+        "mysql2": "^2.3.3"
     },
     "devDependencies": {
         "@faker-js/faker": "^6.1.2",
