--- a/.env_example
+++ b/.env_example
@@ -3,3 +3,8 @@ PORT=3306
 USER="root"
 PASS="s1mpl3"
 DATABASE="myDB"
+
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
+# prisma datasource url
+DATABASE_URL="mysql://USERNAME:PASSWORD@localhost:3306/DBname"
