--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/mustak/100days-of-code#readme",
     "dependencies": {
+        "@prisma/client": "^3.14.0",
         "dotenv": "^16.0.1",
         "ejs": "^3.0.2",
         "express": "^4.17.3",
@@ -31,6 +32,7 @@
         "@faker-js/faker": "^6.1.2",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.23",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "prisma": "^3.14.0"
     }
 }
