--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express": "^4.17.3",
         "helmet": "^5.0.2",
         "mongodb": "4.9",
+        "multer": "^1.4.5-lts.1",
         "mysql2": "^2.3.3"
     },
     "devDependencies": {
