--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     },
     "homepage": "https://github.com/mustak/100days-of-code#readme",
     "dependencies": {
+        "bcrypt": "^5.1.0",
+        "connect-mongodb-session": "^3.1.1",
         "dotenv": "^16.0.1",
         "ejs": "^3.0.2",
         "express": "^4.17.3",
+        "express-session": "^1.17.3",
         "helmet": "^5.0.2",
         "mongodb": "4.9",
         "multer": "^1.4.5-lts.1",
