--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "devx": "node app.js",
-        "dev": "node -r dotenv/config app.js"
+        "dev": "node -r dotenv/config app.js",
+        "tailwind": "tailwindcss -i ./views/ejs/shop/tailwind/input.css -o ./public/shop/styles/styles.css --watch"
     },
     "repository": {
         "type": "git",
@@ -36,6 +37,7 @@
         "@faker-js/faker": "^6.1.2",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.23",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "tailwindcss": "^3.2.4"
     }
 }
